feat: 권한분리/카테고리/히스토리/저재고알림/이미지/Web Push 추가
- Role(ADMIN/EMPLOYEE) 추가, ADMIN_EMAIL 환경변수로 관리자 지정
- JWT에 role 클레임 포함, CustomUserDetails 권한 반영
- @EnableMethodSecurity + @PreAuthorize로 관리자 전용 엔드포인트 보호
- Category 엔티티/API 추가, Item에 category/lowStockThreshold/imageUrl 필드 추가
- 자재 검색 시 카테고리 필터 지원
- RegisterInbound/Outbound에 ChangeHistory 자동 저장 연결
- 출고 후 재고 임계값 이하 시 관리자에게 Web Push 알림 발송
- nl.martijndwars:web-push + BouncyCastle 의존성 추가
- PushSubscription 구독/해제 API 추가
- 자재 이미지 업로드/삭제 API 추가 (로컬 파일 저장)
- UserController 추가: 사용자 목록 조회, 권한 변경 (관리자 전용)
- application.yml에 VAPID/이미지/관리자이메일 설정 추가