@@ -2,11 +2,13 @@ package team2.stk.shared.config;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+import team2.stk.domain.user.Role;
 import team2.stk.domain.user.User;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 @RequiredArgsConstructor
@@ -14,50 +16,21 @@ public class CustomUserDetails implements UserDetails {
 
     private final User user;
 
-    public UUID getId() {
-        return user.getId();
-    }
+    public UUID getId()    { return user.getId(); }
+    public String getName()  { return user.getName(); }
+    public String getEmail() { return user.getEmail(); }
+    public Role getRole()    { return user.getRole(); }
 
-    public String getName() {
-        return user.getName();
-    }
-
-    public String getEmail() {
-        return user.getEmail();
-    }
-
-    @Override
-    public String getUsername() {
-        return user.getId().toString();
-    }
-
-    @Override
-    public String getPassword() {
-        return user.getPasswordHash();
-    }
+    @Override public String getUsername() { return user.getId().toString(); }
+    @Override public String getPassword() { return user.getPasswordHash(); }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()));
     }
 
-    @Override
-    public boolean isAccountNonExpired() {
-        return true;
-    }
-
-    @Override
-    public boolean isAccountNonLocked() {
-        return true;
-    }
-
-    @Override
-    public boolean isCredentialsNonExpired() {
-        return true;
-    }
-
-    @Override
-    public boolean isEnabled() {
-        return user.isVerified();
-    }
+    @Override public boolean isAccountNonExpired()     { return true; }
+    @Override public boolean isAccountNonLocked()      { return true; }
+    @Override public boolean isCredentialsNonExpired() { return true; }
+    @Override public boolean isEnabled()               { return user.isVerified(); }
 }
